# inventory_back

./: .env  pyproject.toml  test_data.sql
src/: config.py  database.py  exception_handlers.py  exceptions.py  main.py
src/adminpanel/: auth.py  views.py
src/analytics/: router.py  schemas.py
src/auth/: auth.py  dependencies.py  router.py  schemas.py
src/dao/: base.py
src/device_types/: dao.py  models.py  router.py  schemas.py
src/devices/: dao.py  models.py  router.py  schemas.py
src/failure_records/: dao.py  models.py  router.py  schemas.py
src/inventory_events/: dao.py  models.py  router.py  schemas.py
src/inventory_items/: dao.py  models.py  router.py  schemas.py
src/locations/: dao.py  models.py  router.py  schemas.py  utils.py
src/maintenance_tasks/: dao.py  models.py  router.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: 1e5d0b2a13f0_added_relation.py  3d823cfcab7f_migration.py  6218cba85766_migration.py  8f30a08c56c1_migration.py  cea46924b05f_migration.py
src/movements/: dao.py  models.py  router.py  schemas.py
src/part_types/: dao.py  models.py  router.py  schemas.py
src/replacement_suggestions/: dao.py  models.py  router.py  schemas.py
src/schemas/: base.py
src/stats/: __init__.py  dao.py  router.py
src/tasks/: warranty_suggestions.py
src/users/: dao.py  dependencies.py  models.py  router.py  schemas.py
src/write_off_reports/: dao.py  models.py  router.py  schemas.py
