[tool.poetry]
name = "diplom_mine_backend"
version = "0.1.0"
description = "Backend for datacenter equipment and user management"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
alembic = "1.15.2"
apscheduler = "3.11.0"
asyncpg = "0.30.0"
bcrypt = "4.3.0"
certifi = "2025.4.26"
click = "8.1.8"
colorama = "0.4.6"
dnspython = "2.7.0"
ecdsa = "0.19.1"
email-validator = "2.2.0"
fastapi = "0.115.12"
fastapi-cli = "0.0.7"
greenlet = "3.2.1"
h11 = "0.16.0"
httpcore = "1.0.9"
httptools = "0.6.4"
idna = "3.7"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
mako = "1.3.5"
openpyxl = "3.1.2"
orjson = "3.10.3"
passlib = "1.7.4"
psycopg2-binary = "2.9.9"
pydantic = "2.7.1"
pydantic-settings = "2.2.1"
pydantic-extra-types = "2.7.0"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
python-multipart = "0.0.9"
pyyaml = "6.0.1"
rich = "13.7.1"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.30"
typing-extensions = "4.12.2"
tzdata = "2024.1"
tzlocal = "5.2"
uvicorn = "0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"